--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a class="tema" href="arterupestre.html" onclick="falar('Arte Rupestre e Antiga')">
       <span>Arte Rupestre <br> e Antiga</span>
     </a>
-    <a class="tema" href="renascimento.html" onclick="falar('Renascimento')">
+    <a class="tema" href="renascimento/inicio.html" onclick="falar('Renascimento')">
       <span>Renascimento</span>
     </a>
     <a class="tema" href="Impressionismo.html" onclick="falar('Impressionismo e Pós-impressionismo')">
