--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="tema" href="renascimento/inicio.html" onclick="falar('Renascimento')">
       <span>Renascimento</span>
     </a>
-    <a class="tema" href="Impressionismo.html" onclick="falar('Impressionismo e Pós-impressionismo')">
+    <a class="tema" href="impressionismoeposimpressionismo/index.html" onclick="falar('Impressionismo e Pós-impressionismo')">
       <span>Impressionismo <br>e Pós-impressionismo</span>
     </a>
     <a class="tema" href="artemoderna.html" onclick="falar('Arte Moderna Brasileira e Contemporânea')">
@@ -45,3 +45,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
